--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "wc-build": "vue-cli-service build --target wc --name awc-custom-table ./src/main.js"
   },
   "dependencies": {
     "vue": "^2.5.21"
