--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "awc-table",
   "version": "0.1.0",
-  "private": true,
+  "author": "aiyk <aiyk.ekwe@gmail.com>",
+  "license": "MIT",
+  "main": "./dist/awc-custom-table.min.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
