--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "wc-build": "vue-cli-service build --target wc --name awc-custom-table ./src/main.js"
   },
   "dependencies": {
+    "@webcomponents/webcomponentsjs": "^2.2.3",
     "vue": "^2.5.21"
   },
   "devDependencies": {
